Bug 1078163 - WorkerNavigator strings should honor general.*.override prefs in e10s mode, r=khuey